--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,9 @@
 [masters]
-master1 ansible_host=3.99.191.167 ansible_user=ubuntu
+master1 ansible_host={inpute master ip} ansible_user=ubuntu
 
 [workers]
-worker1 ansible_host=99.79.190.60 ansible_user=ubuntu
-worker2 ansible_host=3.96.128.151 ansible_user=ubuntu
+worker1 ansible_host={inpute first worker ip} ansible_user=ubuntu
+worker2 ansible_host={inpute second worker ip} ansible_user=ubuntu
 
 [all:vars]
 ansible_ssh_private_key_file=~/daniel-2.pem
