--- a/inventory.ini
+++ b/inventory.ini
@@ -6,5 +6,5 @@ worker1 ansible_host={inpute first worker ip} ansible_user=ubuntu
 worker2 ansible_host={inpute second worker ip} ansible_user=ubuntu
 
 [all:vars]
-ansible_ssh_private_key_file=~/daniel-2.pem
+ansible_ssh_private_key_file={ssh key file}
 ansible_python_interpreter=/usr/bin/python3
