--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,9 @@
 [masters]
-master1 ansible_host={inpute master ip} ansible_user=ubuntu
+master1 ansible_host={inpute master ip} ansible_user={name of the user}
 
 [workers]
-worker1 ansible_host={inpute first worker ip} ansible_user=ubuntu
-worker2 ansible_host={inpute second worker ip} ansible_user=ubuntu
+worker1 ansible_host={inpute first worker ip} ansible_user={name of the user}
+worker2 ansible_host={inpute second worker ip} ansible_user={name of the user}
 
 [all:vars]
 ansible_ssh_private_key_file={ssh key file}
